<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="@drawable/custom_bg_2"
    android:orientation="vertical"
    android:layout_margin="40dip"
    >
   	    <TextView 
				android:id="@+id/popup_aboutus_title"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content" 
				android:layout_centerHorizontal="true"
				android:text="@string/aboutustitle"
				android:textSize="26sp" 
				android:textColor="#FFFFFF"
			    android:layout_alignParentTop="true"	 
		></TextView>
   	    <LinearLayout
   	        	android:id="@+id/popup_aboutus_versioninfo"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content" 
				android:layout_centerHorizontal="true"
				android:orientation="horizontal"
			    android:layout_below="@+id/popup_aboutus_title"
   	        >
		   	    <TextView 
						android:id="@+id/popup_aboutus_versionheading"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content" 
						android:textSize="12sp" 
						android:paddingRight="4dip"
						android:text="@string/aboutusversionheading"
						android:textColor="#FFFFFF"
				></TextView>
		   	    <TextView 
						android:id="@+id/popup_aboutus_version"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content" 
						android:textSize="12sp" 
						android:textColor="#FFFFFF"
				></TextView>
		   	 </LinearLayout>   	    
    	<ScrollView 
		    android:id="@+id/popup_aboutus_scrollable"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_below="@+id/popup_aboutus_versioninfo"
	    >
	    
		    <TextView
				android:id="@+id/tv_popup_aboutus_verbiage"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content" 
				android:textSize="16sp"
				android:padding="10dip"
				android:text="@string/aboutusverbiage"
				android:textColor="#FFFFFF" />
    	    
		</ScrollView>
		
		<TextView 
			android:id="@+id/aboutus_privacypolicyurl"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" 
			android:linksClickable="true"
			android:textSize="16sp" 
			android:textColor="#B6D5E0"
		    android:layout_centerHorizontal="true"
			android:layout_below="@+id/popup_aboutus_scrollable"
			android:text="@string/aboutusprivacypolicyheading"
		></TextView>
		<TextView 
			android:id="@+id/aboutus_termsandconditionsurl"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" 
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="6dip"
		    android:layout_marginBottom="6dip"
			android:linksClickable="true"
			android:textSize="16sp" 
			android:textColor="#B6D5E0"
			android:layout_below="@+id/aboutus_privacypolicyurl"
			android:text="@string/aboutustermsandconditionsheading"
		></TextView>
		
		<LinearLayout 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerHorizontal="true"
    	    android:orientation="horizontal"
    	    android:layout_below="@+id/aboutus_termsandconditionsurl"
    	    >
    	    <Button
		        android:id="@+id/aboutusClosePopup"
		        style="?android:attr/buttonStyleSmall"
		        android:textColor="#dddddd"
		        android:layout_width="wrap_content"			        
		        android:layout_height="wrap_content"
		        android:text="@string/location_popup_close_button" />
    	    
    	</LinearLayout>
		
</RelativeLayout>
