<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="@drawable/custom_bg_2"
    android:orientation="vertical"
    android:layout_margin="40dip"
    >
    	<ScrollView 
		    android:id="@+id/disclaimermap_scrollable"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"	 
	    >
	    
		    <TextView
				android:id="@+id/tv_disclaimer"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content" 
				android:textSize="16sp"
				android:padding="10dip"
				android:text="@string/disclaimer"
				android:textColor="#FFFFFF" />
    	    	    
    	    
		</ScrollView>

    	<CheckBox
    	    android:id="@+id/cb_disclaimermap_donotshowagain"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:textColor="#DDDDDD"
    	    android:layout_marginTop="6dip"
    	    android:layout_marginBottom="6dip"
    	    android:layout_centerHorizontal="true"
    	    android:layout_below="@+id/disclaimermap_scrollable"
    	    android:text="@string/disclaimer_donotshowagain" />
    	<LinearLayout 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerHorizontal="true"
    	    android:orientation="horizontal"
    	    android:layout_below="@+id/cb_disclaimermap_donotshowagain"
    	    >
    	    <Button
		        android:id="@+id/disclaimermap_cancelbutton"
		        style="?android:attr/buttonStyleSmall"
		        android:textColor="#dddddd"
		        android:layout_marginRight="15dip"
		        android:layout_width="wrap_content"			        
		        android:layout_height="wrap_content"
		        android:text="@string/disclaimer_cancelbutton" />
    	    <Button
		        android:id="@+id/closePopup"
		        style="?android:attr/buttonStyleSmall"
		        android:textColor="#dddddd"
		        android:layout_width="wrap_content"			        
		        android:layout_height="wrap_content"
		        android:text="@string/disclaimer_closebutton" />
    	    
    	</LinearLayout>
		
</RelativeLayout>
