<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bg_2"
    android:orientation="vertical"
	>
    <!--  ListRow Left side Thumbnail image -->
    <LinearLayout android:id="@+id/location_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dip"
        android:layout_gravity="center_horizontal">
 
        <ImageView
            android:id="@+id/servicedetail_image"
            android:contentDescription="@string/service_popup_contentDescripton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            
            />
 
    </LinearLayout>
    <LinearLayout android:id="@+id/activity_titleandfavorite"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"	    
	    android:layout_gravity="center_horizontal"
	    android:layout_below="@+id/location_image_layout"
		 >		
		    <TextView 
				android:id="@+id/servicedetail_name"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content" 
				android:layout_gravity="center_horizontal"
				android:gravity="center_horizontal"
				android:paddingLeft="33dip"
				android:paddingRight="33dip"
				android:textSize="26sp" 
				android:textColor="#FFFFFF"
			></TextView>
    </LinearLayout>
    <TextView 
		android:id="@+id/servicedetail_address"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" 
		android:layout_gravity="center_horizontal"
		android:textSize="16sp" 
		android:linksClickable="false"		
		android:textColor="#FFFFFF"
		></TextView>
    
    <TextView 
		android:id="@+id/servicedetail_description"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:textSize="16sp" 
		android:maxLines = "11"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="12dp"
		android:scrollbars = "vertical"
		android:textColor="#FFFFFF"
	></TextView>
    

       <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="100dip"
	    android:background="@drawable/custom_bg_2"
	    >
     	<TextView
		    android:id="@+id/servicedetail_phone"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:autoLink="phone"
			android:textSize="16sp" 
			android:textColor="#FFFFFF"
			android:layout_marginBottom="5dip"
			android:layout_centerInParent="true"

	 	/>
    	<TextView 
			android:id="@+id/servicedetail_soundurl"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" 
			android:textSize="16sp" 
			android:textColor="#FFFFFF"
			android:layout_centerInParent="true"
			android:layout_marginBottom="5dip"
			android:layout_below="@+id/servicedetail_phone"
		></TextView>        
		<TextView 
			android:id="@+id/servicedetail_weburl"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" 
			android:linksClickable="true"
			android:textSize="16sp" 
			android:textColor="#B6D5E0"
			android:text="@string/visit_the_web_link"
			android:layout_centerInParent="true"
			android:layout_below="@+id/servicedetail_phone"
			android:layout_marginRight="5dp"

			
		></TextView>
	</RelativeLayout>        
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       	android:layout_gravity="center_horizontal"
        >	
    
        <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
	        android:layout_centerHorizontal="true"
			>
		        <Button
			        android:id="@+id/serviceseeOnMap"
			        style="?android:attr/buttonStyleSmall"
			        android:textColor="#dddddd"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="15dp"
			        android:text="@string/location_popup_showonmap_button" 
			     />
            
			    <ImageView 
			        android:id="@+id/ibtn_service_favorite"
			        android:contentDescription="Favorite"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:layout_marginRight="15dip"
			        />
		        		        
		        
		        <Button
			        android:id="@+id/closePopup"
			        style="?android:attr/buttonStyleSmall"
			        android:textColor="#dddddd"
			        android:layout_width="wrap_content"			        
			        android:layout_height="wrap_content"
			        android:text="@string/location_popup_close_button" 
			     />
		</LinearLayout>        	    
        
    </RelativeLayout>
	   		    
	    
</LinearLayout>

